2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLocale.m
	* Headers/Additions/GNUstepBase/config.h.in
	* config/icu.m4
	* configure.ac
	* configure
	* config.mak.in
	Autoconf support for ICU

2010-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/Foundation.h: add NSLocale
	* Headers/Foundation/NSLocale.h: rewrite/document
	* Source/GNUmakefile: add NSLocale
	* Source/NSLocale.m: fixup headers and disable temporarily (so that
	base will still build)

2010-06-25  Stef Bidi <stefanbidi@gmail.com>

	* Headers/Foundation/NSLocale.h
	* Source/NSLocale.m
	Partial NSLocale implementation wrapping ICU

2010-06-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundle.m: When looking up paths, if no extension is provided
	then try to obtain it from the name.  Mimics OSX behavior.

2010-06-22  David Wetzel <dave@turbocat.de>

	* Headers/Foundation/NSFileManager.h
	* Source/NSFileManager.m
	add attributesOfItemAtPath:error:
	
2010-06-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/GSVersionMacros.h:
	Include header for ObjC2 blocks support if the compiler had that.

2010-06-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Version 1.21.1

2010-06-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Version 1.20.1

2010-06-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Remove inappropriate warning (when library
	used without resources).

2010-06-16  Sergey Golovin

	* Source/NSTimeZone.m: find timezone from localtime file when it's
	a copy rather than a link to a file whose name is a timezone name.

2010-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: better control over constant string class
	* configure: regenerate
	Don't allow build if compiler doesn't let us set the constant string
	class ... unless explicitly overridden (add warning).
	Explicitly deprecate ffcall

2010-06-15  Richard Frith-Macdonald <rfm@gnu.org>
